# plsm

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md
.devcontainer/: Dockerfile  devcontainer.json
compiled/: exit-42
compiler/: .gitignore  CMakeLists.txt  adscript.g4  dev.Dockerfile  lexer.ll  parser.yy  plsm.g4  test.json
compiler/cmake/: ExternalAntlr4Cpp.cmake
compiler/include/: AST.h  ASTVisitor.h  Analysis.h  Compile.h  Errors.h  Parser.h  ParserDriver.h  Terminal.h  Utils.h
compiler/include/AST/: AST.h  Base.h  BaseASTVisitor.h  Def.h
compiler/include/AST/Expr/: BinExpr.h  Block.h  Call.h  CallExpr.h  CastExpr.h  Closure.h  Identifier.h  LambdaExpr.h  PropExpr.h  Tuple.h  UnExpr.h  UnaryExpr.h  Value.h
compiler/include/AST/Module/: Import.h  Module.h
compiler/include/AST/Stmt/: AssignStmt.h  Block.h  ExprStmt.h  FnDecl.h  FnDef.h  IfStmt.h  InlineAsm.h  RetStmt.h  TraitAlias.h  TraitDecl.h  TraitDef.h  TypeAlias.h  TypeDecl.h  TypeDef.h  ValDecl.h  VarDecl.h  WhileStmt.h
compiler/include/AST/Type/: Closure.h  Function.h  FunctionType.h  Generic.h  Named.h  PointerType.h  PrimitiveType.h  Tuple.h
compiler/include/AST/TypeName/: NamedTypeName.h  PointerTypeName.h  PrimitiveTypeName.h
compiler/setup/: llvm
compiler/src/: Errors.cpp  Parser.cpp  ParserDriver.cpp  main.cpp
compiler/src/AST/: Base.cpp
compiler/src/AST/Expr/: BinExpr.cpp  Block.cpp  Call.cpp  CallExpr.cpp  CastExpr.cpp  Closure.cpp  Identifier.cpp  LambdaExpr.cpp  PropExpr.cpp  Tuple.cpp  UnExpr.cpp  UnaryExpr.cpp  Value.cpp
compiler/src/AST/Module/: Import.cpp  Module.cpp
compiler/src/AST/Stmt/: AssignStmt.cpp  Block.cpp  ExprStmt.cpp  FnDecl.cpp  FnDef.cpp  IfStmt.cpp  InlineAsm.cpp  RetStmt.cpp  TraitAlias.cpp  TraitDef.cpp  TypeAlias.cpp  TypeDef.cpp  ValDecl.cpp  VarDecl.cpp  WhileStmt.cpp
compiler/src/AST/Type/: Closure.cpp  FunctionType.cpp  Generic.cpp  Named.cpp  PointerType.cpp  PrimitiveType.cpp  Tuple.cpp
compiler/src/AST/TypeName/: PointerTypeName.cpp  PrimitiveTypeName.cpp
compiler/src/Anlaysis/: NameAnalysis.cpp  TypeAnalysis.cpp
compiler/src/Visitors/: Compiler.cpp  NameAnalysis.cpp  TypeAnalysis.cpp
examples/: 42.plsm  new  new.plsm  new1.plsm  stdlib.plsm
lib/: CMakeLists.txt  int.c  int.h  lib.h  type.h  value.h
lib/include/: function.h  init.h  list.h  macros.h  type.h  value.h
lib/include/types/: bool.h  int.h  types.h
lib/src/: init.c  module.c  type.c  types.c
lib/src/types/: bool.c  int.c
src/: inst.c  inst.h  main.c  map.h  memory.c  memory.h
src/AST/: Function.cpp  Function.h  Number.cpp  Number.h  Type.cpp  Value.h
src/AST/Type/: Struct.h  Type.cpp  Type.h
src/AST/Value/: Function.cpp  Function.h  Number.cpp  Number.h  Value.h
src/Compiler/: BuildContext.h  VariableScope.h  VariableStore.h
src/Compiler/BuiltIn/: Function.cpp  Function.h
src/Compiler/Module/: BuiltIn.cpp  BuiltIn.h
